--- a/examples/.env
+++ b/examples/.env
@@ -1,3 +1,3 @@
-app_key = "Your app key"
-app_secret = "Your app secret"
+app_key = "v4BmiQLFBEgQllczTxjkXFKjnlA49VtG"
+app_secret = "JQhYgNlivdCBNYm3"
 callback_url = "https://127.0.0.1"
